--- a/Resources.qrc
+++ b/Resources.qrc
@@ -5,6 +5,8 @@
         <file>images/loading 2.gif</file>
         <file>images/loading_widget.gif</file>
         <file>images/loading_small_1a87c5.gif</file>
+        <file>images/icons8-chevron-down-64.png</file>
+        <file>images/icons8-chevron-up-64.png</file>
     </qresource>
     <qresource prefix="/fonts"/>
     <qresource prefix="/">
