--- a/pages/printer/widgets/printerbed/bedmesh/empty/bedmeshemptyframe.ui
+++ b/pages/printer/widgets/printerbed/bedmesh/empty/bedmeshemptyframe.ui
@@ -73,6 +73,12 @@
      <property name="text">
       <string/>
      </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
     </widget>
    </item>
   </layout>
