--- a/pages/settings/add_printer/addextruderspage.ui
+++ b/pages/settings/add_printer/addextruderspage.ui
@@ -72,8 +72,21 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="4" column="0">
     <spacer name="profileSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="4" column="1">
+    <spacer name="profileSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
