--- a/pages/settings/add_printer/addprinterpage.ui
+++ b/pages/settings/add_printer/addprinterpage.ui
@@ -14,7 +14,21 @@
    <string>WizardPage</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="8">
+   <item row="0" column="1" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Name</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Color</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" rowspan="10">
     <widget class="QLabel" name="printerIconLabel">
      <property name="minimumSize">
       <size>
@@ -36,30 +50,24 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QLabel" name="label">
+   <item row="9" column="1" colspan="2">
+    <widget class="QCheckBox" name="defaultPrinterCheckBox">
      <property name="text">
-      <string>Name</string>
+      <string>Default Printer</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="nameEdit"/>
-   </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Instance Location</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="instanceEdit"/>
-   </item>
-   <item row="3" column="2">
-    <widget class="QToolButton" name="browseFilesButton">
+   <item row="7" column="2">
+    <widget class="QToolButton" name="colorPickerButton">
      <property name="text">
       <string>...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QCheckBox" name="autoConnectCheckBox">
+     <property name="text">
+      <string>Auto Connect</string>
      </property>
     </widget>
    </item>
@@ -70,28 +78,27 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1" colspan="2">
-    <widget class="QLineEdit" name="keyEdit">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-    </widget>
+   <item row="1" column="1" colspan="2">
+    <widget class="QLineEdit" name="nameEdit"/>
    </item>
-   <item row="6" column="1">
-    <widget class="QCheckBox" name="autoConnectCheckBox">
+   <item row="7" column="1">
+    <widget class="QLineEdit" name="colorEdit"/>
+   </item>
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Auto Connect</string>
+      <string>Instance Location</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="1" colspan="2">
-    <widget class="QCheckBox" name="defaultPrinterCheckBox">
+   <item row="7" column="3">
+    <widget class="QLabel" name="colorDisplayLabel">
      <property name="text">
-      <string>Default Printer</string>
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="3">
+   <item row="10" column="0" colspan="4">
     <widget class="QTextEdit" name="helpTextEdit">
      <property name="readOnly">
       <bool>true</bool>
@@ -115,6 +122,23 @@ li.checked::marker { content: &quot;\2612&quot;; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;For remote instances, you will also need to provide the api key. See the Moonraker docs for more information.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
+   </item>
+   <item row="5" column="1" colspan="3">
+    <widget class="QLineEdit" name="keyEdit">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="3">
+    <widget class="QToolButton" name="browseFilesButton">
+     <property name="text">
+      <string>...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="2">
+    <widget class="QLineEdit" name="instanceEdit"/>
    </item>
   </layout>
  </widget>
